[package]
name = "rustbot"
version = "0.1.0"
authors = ["Keenan Graham <keenangraham@stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
slack = "0.22.0"
slack_api = "0.21.0"
reqwest = {version = "0.10", features = ["json"]}
tokio = {version = "0.2", features = ["full"]}
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
regex = "1"
lazy_static = "1.4.0"
crossbeam-channel = "0.4"
concache = "0.2.1"
uuid = { version = "0.8", features = ["v4"] }
clap = "2.33.1"