[package]
name = "rustbot"
version = "0.1.0"
authors = ["Keenan Graham <keenangraham@stanford.edu>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
slack = "0.23.0"
slack_api = "0.22.0"
reqwest = {version = "0.10", features = ["json"]}
tokio = {version = "0.2", features = ["full"]}
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
regex = "1"
lazy_static = "1.4.0"
crossbeam-channel = "0.4"
concache = "0.2.1"
uuid = { version = "0.8", features = ["v4"] }
clap = "2.33.1"
log = "0.4.0"
env_logger = "0.7.1"
rusoto_core = "0.44.0"
rusoto_ec2 = "0.44.0"
rusoto_mock = "0.44.0"
itertools = "0.9.0"